# docker-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  capture_final.sh
src/: config.rs  docker.rs  env.rs  main.rs  pins.rs  tasks.rs  ui.rs
src/docker/: compose.rs  containers.rs  images.rs  mod.rs  networks.rs  swarm.rs  system.rs  volumes.rs
src/ui/: app.rs  mod.rs  types.rs
src/ui/draw/: logs.rs  mod.rs  popups.rs  sidebar.rs
src/ui/handle/: actions.rs  mod.rs  navigation.rs  shortcuts.rs
