[package]
name = "docker-cli"
version = "0.1.0"
edition = "2021"
description = "Rust port of efora-dev-tui: TUI to manage docker compose stack + post-up tasks"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "sync"] }
dotenvy = "0.15"
open = "5"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
